Fix T48283: on OS X, mouse clicks not working properly if application launch takes a long time.